@@ -1,0 +1,7 @@
+--check
+--decode-level=
+--encrypt
+!--completion-bash
+!--copyright
+!--help
+!--version
