@@ -1,0 +1,7 @@
+--check
+--completion-bash
+--copyright
+--decode-level=
+--encrypt
+--help
+--version
