@@ -1,0 +1,3 @@
+!--copyright
+!--help
+!--version
